Shang New Live/src/objects/Rent_Schedules__c.object
<CustomObject>
    <fields>
        <fullName>Active_Unit__c</fullName>
        <formula>Unit__r.End_Date__c &gt;= End_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Active Unit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AmountRounding__c</fullName>
        <formula>Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Rounded Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Amount_Foreign__c</fullName>
        <label>Amount (Foreign)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Amount_Local__c</fullName>
        <label>Amount (Local)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Amount__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Approved__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Area_ft__c</fullName>
        <formula>Unit__r.NLA_SQF__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>From related (Lookup) Unit</inlineHelpText>
        <label>Area (ft)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Base_Rent_By_LU_Local__c</fullName>
        <formula>NULLVALUE(Converted_Base_Rent__c, 0.00) *  Exchange_Rate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Base Rent (By Lease Unit) (Local)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Base_Rent_By_Lease_Local__c</fullName>
        <formula>NULLVALUE(Converted_Base_Rent_By_Lease__c, 0.00) *  Exchange_Rate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Base Rent (By Lease) (Local)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Base_Rent_LC__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Base Rent (LC)</label>
        <referenceTo>Lease_Charges__c</referenceTo>
        <relationshipLabel>Rent Schedules (Base Rent (LC))</relationshipLabel>
        <relationshipName>Rent_Schedules1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Base_Rent_Local__c</fullName>
        <formula>IF( Charge_Type__c &lt;&gt; &quot;GTO Rent&quot;,Base_Rent_LC__r.Base_Rent_Calculation__c*Calc_No_of_Days_Pro_Rated_2__c * Exchange_Rate__c ,
IF(ISPICKVAL( Lease_Unit__r.Lease_Agreement_No__r.GTO_Billed__c , &quot;By Lease Unit&quot;), Base_Rent_By_LU_Local__c , Base_Rent_By_Lease_Local__c )
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Extracting Value from Base Rent (LC) * Calc - No of Days (Pro-Rated)</inlineHelpText>
        <label>Base Rent (Local)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Base_Rent_RS_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>(Base Rent RS 1: End Date - Current RS: Start Date) + 1</description>
        <label>Base Rent RS 1</label>
        <referenceTo>Rent_Schedules__c</referenceTo>
        <relationshipLabel>Rent Schedules (Base Rent RS 1)</relationshipLabel>
        <relationshipName>Rent_Schedules1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Base_Rent_RS_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>(Current RS: End Date - Base Rent RS 2: Start Date) + 1</description>
        <label>Base Rent RS 2</label>
        <referenceTo>Rent_Schedules__c</referenceTo>
        <relationshipLabel>Rent Schedules (Base Rent RS 2)</relationshipLabel>
        <relationshipName>Rent_Schedules2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Base_Rent__c</fullName>
        <formula>Base_Rent_LC__r.Base_Rent_Calculation__c*Calc_No_of_Days_Pro_Rated_2__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Extracting Value from Base Rent (LC) * Calc - No of Days (Pro-Rated)</inlineHelpText>
        <label>Base Rent</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Billed_Month__c</fullName>
        <formula>Start_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Billed Month</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Billing_Date__c</fullName>
        <label>Billing Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Billing_Month__c</fullName>
        <formula>MONTH(Billing_Date__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Billing Month</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Billing_Type__c</fullName>
        <inlineHelpText>Loaded automatically via system automation. Shows Billing Type of related Rent Roll!</inlineHelpText>
        <label>Billing Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Rent</fullName>
                </value>
                <value>
                    <fullName>Monthly</fullName>
                </value>
                <value>
                    <fullName>Debit Note</fullName>
                </value>
                <value>
                    <fullName>Credit Note</fullName>
                </value>
                <value>
                    <fullName>Ad-Hoc Invoice</fullName>
                </value>
                <value>
                    <fullName>Late Charge</fullName>
                </value>
                <value>
                    <fullName>Miscellaneous</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Calc_Cumulative_Tiered__c</fullName>
        <formula>IF( Total_Units_p__c &gt; Lease_Charge__r.Tier_5_Upper_Limit__c &amp;&amp; Lease_Charge__r.Tier_5_Upper_Limit__c &gt; 0, 
( Lease_Charge__r.Tier_6_Rate__c * (Total_Units_p__c - Lease_Charge__r.Tier_5_Upper_Limit__c )) + 
( Lease_Charge__r.Tier_5_Rate__c * (Lease_Charge__r.Tier_5_Upper_Limit__c -Lease_Charge__r.Tier_4_Upper_Limit__c)) + 
( Lease_Charge__r.Tier_4_Rate__c * (Lease_Charge__r.Tier_4_Upper_Limit__c -Lease_Charge__r.Tier_3_Upper_Limit__c)) + 
( Lease_Charge__r.Tier_3_Rate__c * (Lease_Charge__r.Tier_3_Upper_Limit__c -Lease_Charge__r.Tier_2_Upper_Limit__c)) + 
( Lease_Charge__r.Tier_2_Rate__c * (Lease_Charge__r.Tier_2_Upper_Limit__c - Lease_Charge__r.Tier_1_Upper_Limit__c)) + 
( Lease_Charge__r.Tier_1_Rate__c * (Lease_Charge__r.Tier_1_Upper_Limit__c - Lease_Charge__r.Tiered_Lower_Limit__c )), 

IF( Total_Units_p__c&gt; Lease_Charge__r.Tier_4_Upper_Limit__c &amp;&amp; 
Lease_Charge__r.Tier_4_Upper_Limit__c &gt; 0, 
( Lease_Charge__r.Tier_5_Rate__c * (Total_Units_p__c - Lease_Charge__r.Tier_4_Upper_Limit__c )) + 
( Lease_Charge__r.Tier_4_Rate__c * (Lease_Charge__r.Tier_4_Upper_Limit__c - Lease_Charge__r.Tier_3_Upper_Limit__c )) + 
( Lease_Charge__r.Tier_3_Rate__c * (Lease_Charge__r.Tier_3_Upper_Limit__c -Lease_Charge__r.Tier_2_Upper_Limit__c)) + 
( Lease_Charge__r.Tier_2_Rate__c * (Lease_Charge__r.Tier_2_Upper_Limit__c -Lease_Charge__r.Tier_1_Upper_Limit__c))+ 
( Lease_Charge__r.Tier_1_Rate__c * ( Lease_Charge__r.Tier_1_Upper_Limit__c - Lease_Charge__r.Tiered_Lower_Limit__c )), 

IF( Total_Units_p__c &gt; Lease_Charge__r.Tier_3_Upper_Limit__c &amp;&amp; 
Lease_Charge__r.Tier_3_Upper_Limit__c &gt; 0, 
( Lease_Charge__r.Tier_4_Rate__c * ( Total_Units_p__c- Lease_Charge__r.Tier_3_Upper_Limit__c )) + 
( Lease_Charge__r.Tier_3_Rate__c * (Lease_Charge__r.Tier_3_Upper_Limit__c - Lease_Charge__r.Tier_2_Upper_Limit__c )) + 
( Lease_Charge__r.Tier_2_Rate__c * (Lease_Charge__r.Tier_2_Upper_Limit__c - Lease_Charge__r.Tier_1_Upper_Limit__c)) + 
( Lease_Charge__r.Tier_1_Rate__c * (Lease_Charge__r.Tier_1_Upper_Limit__c - Lease_Charge__r.Tiered_Lower_Limit__c )), 

IF( Total_Units_p__c &gt; Lease_Charge__r.Tier_2_Upper_Limit__c &amp;&amp; 
Lease_Charge__r.Tier_2_Upper_Limit__c &gt; 0, 
( Lease_Charge__r.Tier_3_Rate__c * (Total_Units_p__c- Lease_Charge__r.Tier_2_Upper_Limit__c )) + 
( Lease_Charge__r.Tier_2_Rate__c * (Lease_Charge__r.Tier_2_Upper_Limit__c - Lease_Charge__r.Tier_1_Upper_Limit__c )) + 
( Lease_Charge__r.Tier_1_Rate__c * (Lease_Charge__r.Tier_1_Upper_Limit__c - Lease_Charge__r.Tiered_Lower_Limit__c )), 

IF( Total_Units_p__c &gt; Lease_Charge__r.Tier_1_Upper_Limit__c &amp;&amp; 
Lease_Charge__r.Tier_1_Upper_Limit__c &gt; 0, 
( Lease_Charge__r.Tier_2_Rate__c * (Total_Units_p__c - Lease_Charge__r.Tier_1_Upper_Limit__c )) + 
( Lease_Charge__r.Tier_1_Rate__c * (Lease_Charge__r.Tier_1_Upper_Limit__c - Lease_Charge__r.Tiered_Lower_Limit__c )) , 
Lease_Charge__r.Tier_1_Rate__c * Total_Units_p__c )))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Show update value when both &apos;Tiered&apos; and &apos;Cumulative&apos; are checked!!</inlineHelpText>
        <label>Calc - Cumulative - Tiered</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Calc_No_of_Days_Pro_Rated_2__c</fullName>
        <description>managed by trigger (calPercentage) to overcome the complexity of logic and characters limit governor in formula field (calPercentage)</description>
        <inlineHelpText>Managed by Trigger</inlineHelpText>
        <label>Calc - No of Days (Pro-Rated) 2</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Calc_No_of_Days_Pro_Rated__c</fullName>
        <description>Update from Calc No of Pro Rated Days 2 (field manage by trigger)</description>
        <formula>Calc_No_of_Days_Pro_Rated_2__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Calc - No of Days (Pro-Rated)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Calc_NonCumulative_Tiered__c</fullName>
        <formula>IF( Total_Units_p__c&gt; Lease_Charge__r.Tier_8_Upper_Limit__c &amp;&amp; Lease_Charge__r.Tier_8_Upper_Limit__c &gt; 0 , 
Lease_Charge__r.Tier_9_Rate__c * Total_Units_p__c , 

IF( Total_Units_p__c&gt; Lease_Charge__r.Tier_7_Upper_Limit__c &amp;&amp; Lease_Charge__r.Tier_7_Upper_Limit__c &gt; 0 , 
Lease_Charge__r.Tier_8_Rate__c * Total_Units_p__c, 

IF( Total_Units_p__c&gt; Lease_Charge__r.Tier_6_Upper_Limit__c &amp;&amp; Lease_Charge__r.Tier_6_Upper_Limit__c &gt; 0 , 
Lease_Charge__r.Tier_7_Rate__c * Total_Units_p__c, 

IF( Total_Units_p__c&gt; Lease_Charge__r.Tier_5_Upper_Limit__c &amp;&amp; Lease_Charge__r.Tier_5_Upper_Limit__c &gt; 0 , 
Lease_Charge__r.Tier_6_Rate__c * Total_Units_p__c, 

IF( Total_Units_p__c&gt; Lease_Charge__r.Tier_4_Upper_Limit__c &amp;&amp; Lease_Charge__r.Tier_4_Upper_Limit__c &gt; 0 , 
Lease_Charge__r.Tier_5_Rate__c * Total_Units_p__c, 

IF( Total_Units_p__c&gt; Lease_Charge__r.Tier_3_Upper_Limit__c &amp;&amp; Lease_Charge__r.Tier_3_Upper_Limit__c &gt; 0 , 
Lease_Charge__r.Tier_4_Rate__c * Total_Units_p__c, 

IF( Total_Units_p__c&gt; Lease_Charge__r.Tier_2_Upper_Limit__c &amp;&amp; Lease_Charge__r.Tier_2_Upper_Limit__c &gt; 0 , 
Lease_Charge__r.Tier_3_Rate__c * Total_Units_p__c , 

IF( Total_Units_p__c&gt; Lease_Charge__r.Tier_1_Upper_Limit__c &amp;&amp; Lease_Charge__r.Tier_1_Upper_Limit__c &gt; 0 , 
Lease_Charge__r.Tier_2_Rate__c * Total_Units_p__c, 

Lease_Charge__r.Tier_1_Rate__c * Total_Units_p__c))))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Shows Calculations only when &apos;Tiered&apos; is checked!</inlineHelpText>
        <label>Calc - Non Cumulative Tiered</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Calculated_Amount_Foreign__c</fullName>
        <label>Calculated Amount (Foreign)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Calculated_Amount_Higher_or_Sum__c</fullName>
        <description>Calculated through &quot;calPercentage&quot;</description>
        <inlineHelpText>Gross Rent (Cap) - Base Rent 
If Gross Rent (Cap) is less than Base Rent then we consider the value as 0. 
(Managed by Trigger)</inlineHelpText>
        <label>GTO Rent</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Calculated_Amount_Local__c</fullName>
        <label>Calculated Amount (Local)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Calculated_Amount__c</fullName>
        <formula>IF( ISPICKVAL( Lease_Charge__r.Charge_Type__c , &quot;GTO Rent&quot;), 
Calculated_Amount_Higher_or_Sum__c 
, 
IF( ISPICKVAL(Lease_Charge__r.Type__c, &quot;Fixed&quot;) , 
Lease_Charge__r.Charge_Rate__c , 

IF(ISPICKVAL(Lease_Charge__r.Charge_Type__c, &quot;Advance Rental&quot;) &amp;&amp; ISPICKVAL(Lease_Charge__r.Billing_Frequency__c, &quot;Monthly&quot;) , 
Lease_Charge__r.Charge_Rate__c * Lease_Charge__r.Lease_Unit__r.Area_Sq_Ft__c * 1 , 

IF(ISPICKVAL(Lease_Charge__r.Charge_Type__c, &quot;Advance Rental&quot;) &amp;&amp; ISPICKVAL(Lease_Charge__r.Billing_Frequency__c, &quot;Quarterly&quot;) , 
Lease_Charge__r.Charge_Rate__c * Lease_Charge__r.Lease_Unit__r.Area_Sq_Ft__c * 3 , 

IF(ISPICKVAL(Lease_Charge__r.Charge_Type__c, &quot;Advance Rental&quot;) &amp;&amp; ISPICKVAL(Lease_Charge__r.Billing_Frequency__c, &quot;Half-Yearly&quot;) , 
Lease_Charge__r.Charge_Rate__c * Lease_Charge__r.Lease_Unit__r.Area_Sq_Ft__c * 6 , 

IF(ISPICKVAL(Lease_Charge__r.Charge_Type__c, &quot;Advance Rental&quot;) &amp;&amp; ISPICKVAL(Lease_Charge__r.Billing_Frequency__c, &quot;Annual&quot;) , 
Lease_Charge__r.Charge_Rate__c * Lease_Charge__r.Lease_Unit__r.Area_Sq_Ft__c * 12 , 

IF( ISPICKVAL(Lease_Charge__r.Type__c, &quot;By Area&quot;) , 
Lease_Charge__r.Charge_Rate__c * Lease_Charge__r.Lease_Unit__r.Area_Sq_Ft__c , 

IF( ISPICKVAL(Lease_Charge__r.Type__c, &quot;By Percent&quot;) ,	
(Lease_Charge__r.Charge_Rate__c /100 ) * Converted_Base_Rent__c, 

IF( ISPICKVAL(Lease_Charge__r.Type__c, &quot;Meter Units&quot;) , 

Lease_Charge__r.Charge_Rate__c * Total_Units_p__c , 
0 
)))))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Calculated Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Calculated_Utility_Non_Tiered__c</fullName>
        <formula>IF ( ( ISPICKVAL(Lease_Charge__r.Charge_Type__c, &quot;Water&quot;) || ISPICKVAL(Lease_Charge__r.Charge_Type__c, &quot;Gas&quot;)) &amp;&amp; NOT( Lease_Charge__r.Charge__r.Tiered_Limit__c  ) &amp;&amp; 
ISPICKVAL( Lease_Charge__r.Multiple_of_Parameter__c , &quot;Meter Units&quot;),
Lease_Charge__r.Charge_Rate__c * Total_Units_p__c , 0 )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Calculated Utility Non Tiered</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Cap_Amount_By_Lease__c</fullName>
        <label>Cap Amount (By Lease)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Cap_Amount__c</fullName>
        <formula>Cap_Value__c  *  Area_ft__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Cap Value * Area (ft)</inlineHelpText>
        <label>Cap Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Cap_Applicable__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Cap Applicable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Cap_Value_By_Lease__c</fullName>
        <label>Cap Value (By Lease)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cap_Value__c</fullName>
        <inlineHelpText>Please define Rate in this field. As this value will be multiplied by Unit Area to extract Cap value.
This field is populate from relate LC (Cap Value) on RS creation. (Managed by Trigger)</inlineHelpText>
        <label>Cap Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Charge_Type__c</fullName>
        <formula>TEXT(Lease_Charge__r.Charge_Type__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Charge Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comm_Tax_2__c</fullName>
        <formula>Lease_Charge__r.Commercial_Tax_Apply__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Comm Tax</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Comm_Tax_Amount_Foreign__c</fullName>
        <label>Comm Tax Amount (Foreign)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Comm_Tax_Amount_Local__c</fullName>
        <label>Comm Tax Amount (Local)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Comm_Tax_Amount__c</fullName>
        <formula>Amount__c  *  Comm_Tax__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Amount * Comm Tax (%)</inlineHelpText>
        <label>Comm Tax Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Comm_Tax_LC__c</fullName>
        <formula>IF ( Lease_Charge__r.Commercial_Tax_Apply__c = TRUE, &quot;YES&quot; , &quot;NO&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Comm Tax (LC)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comm_Tax__c</fullName>
        <inlineHelpText>Controlled by related Lease Charge</inlineHelpText>
        <label>Comm Tax (%)</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <inlineHelpText>Comments updated from related Rent Roll Details (only if RRD was Rejected from Generate Invoice Interface)</inlineHelpText>
        <label>Rejection Reasons</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Converted_Base_Rent_By_Lease__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>Converted Base Rent (By Lease)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Converted_Base_Rent__c</fullName>
        <description>This field is managed by Trigger to extract base Rent from related Base Rent RS records (prorated combination of both records based on Dates) 
Primarily used for A&amp;P and GTO Process
 (managed by Trigger)</description>
        <inlineHelpText>Primarily used for A&amp;P and GTO Calculations
Extracting Value from Base Rent RS 1 &amp; 2 * Calc - No of Days (Pro-Rated)</inlineHelpText>
        <label>Converted Base Rent</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Cumulative__c</fullName>
        <formula>Lease_Charge__r.Cumulative_for_each_Tier__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Controlled by related LC</inlineHelpText>
        <label>Cumulative</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Currency_Code__c</fullName>
        <label>Currency Code</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Currency_Code</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Current_Base_Rent__c</fullName>
        <formula>Lease_Unit__r.Current_Base_Rent__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current Base Rent</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Day__c</fullName>
        <formula>DAY(End_Date__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Day</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Ele_Transaction_Count__c</fullName>
        <description>This field is referred in Trigger code Electric_Trax_linkWithRentSchedules</description>
        <inlineHelpText>This field is referred in Trigger code Electric_Trax_linkWithRentSchedules</inlineHelpText>
        <label>Ele Transaction Count</label>
        <summaryForeignKey>Electric_Transaction__c.Rent_Schedule__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Electric_Meter_Number__c</fullName>
        <label>Electric Meter Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Electric_Meter__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Electric Meter</label>
        <referenceTo>Electric_Meter__c</referenceTo>
        <relationshipLabel>Rent Schedules</relationshipLabel>
        <relationshipName>Rent_Schedules</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Est_Calc_Cumulative_Tiered__c</fullName>
        <formula>IF( Total_Estimated_GTO_Converted__c &gt; Lease_Charge__r.Tier_5_Upper_Limit__c &amp;&amp; Lease_Charge__r.Tier_5_Upper_Limit__c &gt; 0, 
( Lease_Charge__r.Tier_6_Rate__c * (Total_Estimated_GTO_Converted__c - Lease_Charge__r.Tier_5_Upper_Limit__c )) + 
( Lease_Charge__r.Tier_5_Rate__c * (Lease_Charge__r.Tier_5_Upper_Limit__c -Lease_Charge__r.Tier_4_Upper_Limit__c)) + 
( Lease_Charge__r.Tier_4_Rate__c * (Lease_Charge__r.Tier_4_Upper_Limit__c -Lease_Charge__r.Tier_3_Upper_Limit__c)) + 
( Lease_Charge__r.Tier_3_Rate__c * (Lease_Charge__r.Tier_3_Upper_Limit__c -Lease_Charge__r.Tier_2_Upper_Limit__c)) + 
( Lease_Charge__r.Tier_2_Rate__c * (Lease_Charge__r.Tier_2_Upper_Limit__c - Lease_Charge__r.Tier_1_Upper_Limit__c)) + 
( Lease_Charge__r.Tier_1_Rate__c * (Lease_Charge__r.Tier_1_Upper_Limit__c - Lease_Charge__r.Tiered_Lower_Limit__c )), 

IF( Total_Estimated_GTO_Converted__c&gt; Lease_Charge__r.Tier_4_Upper_Limit__c &amp;&amp;
Lease_Charge__r.Tier_4_Upper_Limit__c &gt; 0,
( Lease_Charge__r.Tier_5_Rate__c * (Total_Estimated_GTO_Converted__c - Lease_Charge__r.Tier_4_Upper_Limit__c )) + 
( Lease_Charge__r.Tier_4_Rate__c * (Lease_Charge__r.Tier_4_Upper_Limit__c - Lease_Charge__r.Tier_3_Upper_Limit__c )) + 
( Lease_Charge__r.Tier_3_Rate__c * (Lease_Charge__r.Tier_3_Upper_Limit__c -Lease_Charge__r.Tier_2_Upper_Limit__c)) + 
( Lease_Charge__r.Tier_2_Rate__c * (Lease_Charge__r.Tier_2_Upper_Limit__c -Lease_Charge__r.Tier_1_Upper_Limit__c))+ 
( Lease_Charge__r.Tier_1_Rate__c * ( Lease_Charge__r.Tier_1_Upper_Limit__c - Lease_Charge__r.Tiered_Lower_Limit__c )), 

IF( Total_Estimated_GTO_Converted__c &gt; Lease_Charge__r.Tier_3_Upper_Limit__c &amp;&amp;
Lease_Charge__r.Tier_3_Upper_Limit__c &gt; 0,
( Lease_Charge__r.Tier_4_Rate__c * ( Total_Estimated_GTO_Converted__c- Lease_Charge__r.Tier_3_Upper_Limit__c )) + 
( Lease_Charge__r.Tier_3_Rate__c * (Lease_Charge__r.Tier_3_Upper_Limit__c - Lease_Charge__r.Tier_2_Upper_Limit__c )) + 
( Lease_Charge__r.Tier_2_Rate__c * (Lease_Charge__r.Tier_2_Upper_Limit__c - Lease_Charge__r.Tier_1_Upper_Limit__c)) + 
( Lease_Charge__r.Tier_1_Rate__c * (Lease_Charge__r.Tier_1_Upper_Limit__c - Lease_Charge__r.Tiered_Lower_Limit__c )), 

IF( Total_Estimated_GTO_Converted__c &gt; Lease_Charge__r.Tier_2_Upper_Limit__c &amp;&amp;
Lease_Charge__r.Tier_2_Upper_Limit__c &gt; 0,
( Lease_Charge__r.Tier_3_Rate__c * (Total_Estimated_GTO_Converted__c- Lease_Charge__r.Tier_2_Upper_Limit__c )) + 
( Lease_Charge__r.Tier_2_Rate__c * (Lease_Charge__r.Tier_2_Upper_Limit__c - Lease_Charge__r.Tier_1_Upper_Limit__c )) + 
( Lease_Charge__r.Tier_1_Rate__c * (Lease_Charge__r.Tier_1_Upper_Limit__c - Lease_Charge__r.Tiered_Lower_Limit__c )), 

IF( Total_Estimated_GTO_Converted__c &gt; Lease_Charge__r.Tier_1_Upper_Limit__c &amp;&amp;
Lease_Charge__r.Tier_1_Upper_Limit__c &gt; 0,
( Lease_Charge__r.Tier_2_Rate__c * (Total_Estimated_GTO_Converted__c- Lease_Charge__r.Tier_1_Upper_Limit__c )) + 
( Lease_Charge__r.Tier_1_Rate__c * (Lease_Charge__r.Tier_1_Upper_Limit__c - Lease_Charge__r.Tiered_Lower_Limit__c )) , 
Lease_Charge__r.Tier_1_Rate__c * Total_Estimated_GTO_Converted__c )))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>look into using function of fields instead of this</inlineHelpText>
        <label>Est Calc - Cumulative - Tiered</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Est_Calc_Non_Cumulative_Tiered__c</fullName>
        <formula>IF( Total_Estimated_GTO_Converted__c&gt; Lease_Charge__r.Tier_8_Upper_Limit__c &amp;&amp; Lease_Charge__r.Tier_8_Upper_Limit__c &gt; 0 , 
Lease_Charge__r.Tier_9_Rate__c * Total_Estimated_GTO_Converted__c, 

IF( Total_Estimated_GTO_Converted__c&gt; Lease_Charge__r.Tier_7_Upper_Limit__c &amp;&amp; Lease_Charge__r.Tier_7_Upper_Limit__c &gt; 0 , 
Lease_Charge__r.Tier_8_Rate__c * Total_Estimated_GTO_Converted__c, 

IF( Total_Estimated_GTO_Converted__c&gt; Lease_Charge__r.Tier_6_Upper_Limit__c &amp;&amp; Lease_Charge__r.Tier_6_Upper_Limit__c &gt; 0 , 
Lease_Charge__r.Tier_7_Rate__c * Total_Estimated_GTO_Converted__c, 

IF( Total_Estimated_GTO_Converted__c&gt; Lease_Charge__r.Tier_5_Upper_Limit__c &amp;&amp; Lease_Charge__r.Tier_5_Upper_Limit__c &gt; 0 , 
Lease_Charge__r.Tier_6_Rate__c * Total_Estimated_GTO_Converted__c, 

IF( Total_Estimated_GTO_Converted__c&gt; Lease_Charge__r.Tier_4_Upper_Limit__c &amp;&amp; Lease_Charge__r.Tier_4_Upper_Limit__c &gt; 0 , 
Lease_Charge__r.Tier_5_Rate__c * Total_Estimated_GTO_Converted__c, 

IF( Total_Estimated_GTO_Converted__c&gt; Lease_Charge__r.Tier_3_Upper_Limit__c &amp;&amp; Lease_Charge__r.Tier_3_Upper_Limit__c &gt; 0 , 
Lease_Charge__r.Tier_4_Rate__c * Total_Estimated_GTO_Converted__c, 

IF( Total_Estimated_GTO_Converted__c&gt; Lease_Charge__r.Tier_2_Upper_Limit__c &amp;&amp; Lease_Charge__r.Tier_2_Upper_Limit__c &gt; 0 , 
Lease_Charge__r.Tier_3_Rate__c * Total_Estimated_GTO_Converted__c, 

IF( Total_Estimated_GTO_Converted__c&gt; Lease_Charge__r.Tier_1_Upper_Limit__c &amp;&amp; Lease_Charge__r.Tier_1_Upper_Limit__c &gt; 0 , 
Lease_Charge__r.Tier_2_Rate__c * Total_Estimated_GTO_Converted__c, 
Lease_Charge__r.Tier_1_Rate__c * Total_Estimated_GTO_Converted__c))))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>look into using function of fields instead of this</inlineHelpText>
        <label>Est Calc - Non Cumulative Tiered</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Estimated_GTO_Amount__c</fullName>
        <inlineHelpText>Estimated GTO Amount after tier and cumulative calculation (if any)
Managed by Trigger.</inlineHelpText>
        <label>Estimated GTO Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Estimated_GTO_Rent__c</fullName>
        <inlineHelpText>Apply formula based on GTO Billed type.
Gross Rent (Cap) - Base Rent 
If Gross Rent (Cap) is less than Base Rent then we consider the value as 0.</inlineHelpText>
        <label>Estimated GTO Rent</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Estimated_Gross_Rent_Cap__c</fullName>
        <inlineHelpText>Managed By Trigger.
Depend on GTO Billed Type and GTO Type.

Gross Rent after comparison with Cap Amount
Show Lower Value (Between Gross Rent &amp; Cap Amount.
IF Cap Amount is 0, then we show Gross Rent as it is</inlineHelpText>
        <label>Estimated Gross Rent (Cap)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Estimated_Gross_Rent__c</fullName>
        <inlineHelpText>Managed by trigger.
Based on GTO Billed type and GTO Type.

IF GTO (Sum): GTO + Base Rent
IF GTO (Higher): Pickup Greater Value (between Base Rent &amp; GTO Amount)</inlineHelpText>
        <label>Estimated Gross Rent</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Exchange_Rate__c</fullName>
        <label>Exchange Rate</label>
        <precision>18</precision>
        <scale>8</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Expected_Amount__c</fullName>
        <label>Expected Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Expected_Charge__c</fullName>
        <formula>Lease_Charge__r.Expected_Charge__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Expected Charge</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FM_Start_Date__c</fullName>
        <formula>IF ( AND(Start_Date__c &lt;&gt;  Lease_Charge__r.Start_Date__c, DAY( Start_Date__c ) &lt;&gt; 26), 1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>FM Start Date</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GTO_Amount1__c</fullName>
        <inlineHelpText>Managed by Trigger.</inlineHelpText>
        <label>GTO Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>GTO_Amount_By_Lease__c</fullName>
        <defaultValue>0.00</defaultValue>
        <description>Managed By Trigger when Lease &quot;GTO Billed&quot; is &quot;By Lease (Lease Unit)&quot; or &quot;By Lease (Summary)&quot;</description>
        <label>GTO Revenue Sharing Amount (By Lease)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>GTO_Monthly_Total_Converted__c</fullName>
        <formula>if(Exchange_Rate__c &gt; 0 , GTO_Monthly_Total__c  /  Exchange_Rate__c , 0 )</formula>
        <label>Total GTO (Converted)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>GTO_Monthly_Total__c</fullName>
        <inlineHelpText>Roll-Up of &apos;GTO&apos; from related POS Transaction(s)</inlineHelpText>
        <label>Total GTO</label>
        <summarizedField>POS_Transaction__c.GTO_Amount__c</summarizedField>
        <summaryForeignKey>POS_Transaction__c.Rent_Schedule__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>GTO_Rent_By_Lease__c</fullName>
        <label>GTO Rent (By Lease)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>GTO_Rent_By__c</fullName>
        <label>GTO Rent By</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Estimated GTO</fullName>
                </value>
                <value>
                    <fullName>POS GTO</fullName>
                </value>
                <value>
                    <fullName>Audited GTO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Gas_Transaction_Count__c</fullName>
        <description>This field is referred in Trigger code Gas_Trax_linkWithRentSchedules</description>
        <inlineHelpText>This field is referred in Trigger code Gas_Trax_linkWithRentSchedules</inlineHelpText>
        <label>Gas Transaction Count</label>
        <summaryForeignKey>Gas_Transaction__c.Rent_Schedule__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Gross_Rent_By_Lease__c</fullName>
        <formula>If(ISPICKVAL(Lease_Charge__r.Type__c,&quot;GTO (Sum)&quot;), 
GTO_Amount_By_Lease__c	+ Converted_Base_Rent_By_Lease__c, 
If(ISPICKVAL(Lease_Charge__r.Type__c,&quot;GTO (Higher)&quot;), 
If(GTO_Amount_By_Lease__c &gt; Converted_Base_Rent_By_Lease__c , GTO_Amount_By_Lease__c , Converted_Base_Rent_By_Lease__c), 
If(ISPICKVAL(Lease_Charge__r.Type__c,&quot;GTO&quot;), GTO_Amount_By_Lease__c,0)) 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>IF GTO (Sum): GTO + Base Rent 
IF GTO (Higher): Pickup Greater Value (between Base Rent &amp; GTO Amount)</inlineHelpText>
        <label>Gross Rent (By Lease)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
</CustomObject>